--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
-  <title>崇武道館｜TDS 分館｜尚武道館</title>
-  <meta name="description" content="挑戰極限，站上榮耀舞台｜從道館到國際賽場，專業培訓・堅持自律・成就榮耀" />
+  <title>崇武道館 TDS分館 尚武道館</title>
+  <meta name="description" content="挑戰極限 站上榮耀舞台｜從道館到國際賽場 專業培訓 堅持自律 成就榮耀" />
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
     .text-gold{background:linear-gradient(90deg,#e9d27b,#f1c40f,#d4af37);-webkit-background-clip:text;background-clip:text;color:transparent}
@@ -14,7 +14,7 @@
   <!-- Header -->
   <header class="sticky top-0 z-50 bg-white/80 backdrop-blur border-b">
     <div class="max-w-7xl mx-auto h-14 px-4 flex items-center justify-between">
-      <a class="font-extrabold tracking-wide">崇武・TDS・尚武</a>
+      <a class="font-extrabold tracking-wide">崇武 TDS 尚武</a>
       <nav class="hidden md:flex items-center gap-6">
         <a href="#highlights" class="hover:underline">實力亮點</a>
         <a href="#branches" class="hover:underline">分館介紹</a>
@@ -26,7 +26,7 @@
     </div>
   </header>
 
-  <!-- Hero（使用 100.jpg） -->
+  <!-- Hero -->
   <section class="relative overflow-hidden">
     <div class="absolute inset-0">
       <img src="100.jpg" alt="崇武道館 總館" class="w-full h-full object-cover">
@@ -34,8 +34,8 @@
     </div>
     <div class="relative max-w-7xl mx-auto px-4 py-16 md:py-24 grid md:grid-cols-2 gap-8 items-center">
       <div>
-        <h1 class="text-3xl md:text-6xl font-extrabold leading-tight text-white">挑戰極限，站上<span class="text-gold">榮耀</span>舞台</h1>
-        <p class="mt-4 text-gray-100 text-lg">從道館到國際賽場，專業培訓・堅持自律・成就榮耀</p>
+        <h1 class="text-3xl md:text-6xl font-extrabold leading-tight text-white">挑戰極限 站上<span class="text-gold">榮耀</span>舞台</h1>
+        <p class="mt-4 text-gray-100 text-lg">從道館到國際賽場 專業培訓 堅持自律 成就榮耀</p>
         <div class="mt-6 flex flex-wrap gap-3">
           <a href="#signup" class="px-5 py-3 rounded-xl bg-white text-black font-semibold">立即預約試上</a>
           <a href="https://line.me/" class="px-5 py-3 rounded-xl border border-white text-white">加入 LINE 諮詢</a>
@@ -44,245 +44,64 @@
     </div>
   </section>
 
-  <!-- 三大賣點：圖片呈現（避免影片破圖） -->
-  <section class="max-w-7xl mx-auto px-4 py-12" id="highlights">
-    <h2 class="text-2xl font-bold mb-6">我們的實力</h2>
-    <div class="grid gap-6 md:grid-cols-3">
-      <figure class="group overflow-hidden rounded-2xl border bg-white">
-        <div class="relative aspect-video">
-          <img src="101.jpg" alt="優秀選手" class="w-full h-full object-cover" loading="lazy">
-        </div>
-        <figcaption class="p-4">
-          <div class="flex items-center gap-2 text-sm text-gray-500 mb-1">🏆 優秀選手</div>
-          <h3 class="font-semibold">全國／國際賽實戰與成果</h3>
-          <p class="text-gray-600 text-sm mt-1">真實舞台表現，展現長期訓練的成果。</p>
-        </figcaption>
-      </figure>
-
-      <figure class="group overflow-hidden rounded-2xl border bg-white">
-        <div class="relative aspect-video">
-          <img src="102.jpg" alt="金牌教練團隊" class="w-full h-full object-cover" loading="lazy">
-        </div>
-        <figcaption class="p-4">
-          <div class="flex items-center gap-2 text-sm text-gray-500 mb-1">🥇 金牌教練團隊</div>
-          <h3 class="font-semibold">段位齊備・實戰經驗豐富</h3>
-          <p class="text-gray-600 text-sm mt-1">科學化課表與分組指導，精準看見每位學員。</p>
-        </figcaption>
-      </figure>
-
-      <figure class="group overflow-hidden rounded-2xl border bg-white">
-        <div class="relative aspect-video">
-          <img src="103.jpg" alt="嚴謹晉級檢定" class="w-full h-full object-cover" loading="lazy">
-        </div>
-        <figcaption class="p-4">
-          <div class="flex items-center gap-2 text-sm text-gray-500 mb-1">📈 嚴謹晉級檢定</div>
-          <h3 class="font-semibold">標準化評量・清楚的成長路徑</h3>
-          <p class="text-gray-600 text-sm mt-1">從準備到授帶，每一步都有紀錄與回饋。</p>
-        </figcaption>
-      </figure>
-    </div>
-  </section>
-
-  <!-- 分館介紹（用 101/102/103） -->
+  <!-- 分館介紹 -->
   <section class="max-w-7xl mx-auto px-4 py-12" id="branches">
     <h2 class="text-2xl font-bold mb-4">分館介紹</h2>
     <div class="grid md:grid-cols-3 gap-6">
       <article class="p-6 rounded-2xl border">
         <img src="101.jpg" alt="崇武道館（總館）" class="rounded-xl mb-3">
         <h3 class="font-bold">崇武道館（總館）</h3>
-        <p class="mt-2 text-gray-600">總部・核心訓練中心：品勢、對練、幼兒、初級進階。</p>
-        <div class="mt-3 text-sm text-gray-500">地址／電話／LINE（請替換）</div>
+        <p class="mt-2 text-gray-600">總部 核心訓練中心：品勢 對練 幼兒 初級進階</p>
       </article>
       <article class="p-6 rounded-2xl border">
         <img src="102.jpg" alt="TDS 分館" class="rounded-xl mb-3">
         <h3 class="font-bold">TDS 分館</h3>
-        <p class="mt-2 text-gray-600">自由品勢、公品、跆舞專門訓練。</p>
-        <div class="mt-3 text-sm text-gray-500">地址／電話／LINE（請替換）</div>
+        <p class="mt-2 text-gray-600">自由品勢 公品 跆舞專門訓練</p>
       </article>
       <article class="p-6 rounded-2xl border">
         <img src="103.jpg" alt="尚武道館（分館）" class="rounded-xl mb-3">
         <h3 class="font-bold">尚武道館（分館）</h3>
-        <p class="mt-2 text-gray-600">初級與啟蒙課程：幼兒、初級、基礎品勢。</p>
-        <div class="mt-3 text-sm text-gray-500">地址／電話／LINE（請替換）</div>
+        <p class="mt-2 text-gray-600">初級與啟蒙課程 幼兒 初級 基礎品勢</p>
       </article>
     </div>
   </section>
 
-  <!-- 課程 -->
+  <!-- 課程介紹 -->
   <section class="max-w-7xl mx-auto px-4 py-12" id="courses">
     <h2 class="text-2xl font-bold mb-4">課程介紹</h2>
     <div class="md:grid md:grid-cols-3 md:gap-6 overflow-x-auto md:overflow-visible flex gap-4 snap-x">
       <article class="min-w-[260px] md:min-w-0 snap-start p-5 rounded-2xl border">
         <h3 class="font-bold">品勢班</h3>
-        <p class="mt-2 text-gray-600">基本功與套路扎根，穩定輸出表現力。</p>
-        <div class="mt-3 flex flex-wrap gap-2 text-xs"><span class="px-2 py-1 rounded bg-gray-100">崇武</span><span class="px-2 py-1 rounded bg-gray-100">尚武</span></div>
+        <p class="mt-2 text-gray-600">基本功與套路扎根 穩定輸出表現力</p>
       </article>
       <article class="min-w-[260px] md:min-w-0 snap-start p-5 rounded-2xl border">
         <h3 class="font-bold">對練班</h3>
-        <p class="mt-2 text-gray-600">競技技術與比賽戰術，臨場反應訓練。</p>
-        <div class="mt-3 flex flex-wrap gap-2 text-xs"><span class="px-2 py-1 rounded bg-gray-100">崇武</span></div>
+        <p class="mt-2 text-gray-600">競技技術與比賽戰術 臨場反應訓練</p>
       </article>
       <article class="min-w-[260px] md:min-w-0 snap-start p-5 rounded-2xl border">
         <h3 class="font-bold">自由品勢</h3>
-        <p class="mt-2 text-gray-600">創意與音樂融合，展現高難度與美感。</p>
-        <div class="mt-3 flex flex-wrap gap-2 text-xs"><span class="px-2 py-1 rounded bg-gray-100">TDS</span></div>
+        <p class="mt-2 text-gray-600">創意與音樂融合 展現高難度與美感</p>
       </article>
       <article class="min-w-[260px] md:min-w-0 snap-start p-5 rounded-2xl border">
         <h3 class="font-bold">跆舞班</h3>
-        <p class="mt-2 text-gray-600">節奏與武術表演，舞台自信養成。</p>
-        <div class="mt-3 flex flex-wrap gap-2 text-xs"><span class="px-2 py-1 rounded bg-gray-100">TDS</span><span class="px-2 py-1 rounded bg-gray-100">崇武</span></div>
+        <p class="mt-2 text-gray-600">節奏與武術表演 舞台自信養成</p>
       </article>
       <article class="min-w-[260px] md:min-w-0 snap-start p-5 rounded-2xl border">
         <h3 class="font-bold">初級班</h3>
-        <p class="mt-2 text-gray-600">零基礎友善，動作分解與安全觀念。</p>
-        <div class="mt-3 flex flex-wrap gap-2 text-xs"><span class="px-2 py-1 rounded bg-gray-100">尚武</span></div>
+        <p class="mt-2 text-gray-600">零基礎友善 動作分解與安全觀念</p>
       </article>
       <article class="min-w-[260px] md:min-w-0 snap-start p-5 rounded-2xl border">
         <h3 class="font-bold">幼兒班</h3>
-        <p class="mt-2 text-gray-600">啟蒙專注力與協調性，快樂學習。</p>
-        <div class="mt-3 flex flex-wrap gap-2 text-xs"><span class="px-2 py-1 rounded bg-gray-100">尚武</span></div>
+        <p class="mt-2 text-gray-600">啟蒙專注力與協調性 快樂學習</p>
       </article>
     </div>
-  </section>
-
-  <!-- 月份式 + 分館時刻表 -->
-  <section class="max-w-7xl mx-auto px-4 py-12" id="schedule">
-    <div class="flex items-center justify-between mb-4">
-      <h2 class="text-2xl font-bold">時刻表</h2>
-      <a href="#signup" class="hidden md:inline-flex items-center px-4 py-2 rounded-xl bg-black text-white">預約試上</a>
-    </div>
-
-    <!-- 手機 -->
-    <div class="md:hidden">
-      <div id="monthTabsMobile" class="flex gap-2 overflow-x-auto snap-x pb-2"></div>
-      <div class="mt-3">
-        <label class="text-sm mr-2">選擇分館：</label>
-        <select id="branchSelectMobile" class="p-2 rounded-xl border">
-          <option value="崇武">崇武</option><option value="TDS">TDS</option><option value="尚武">尚武</option>
-        </select>
-      </div>
-      <div id="mobileList" class="mt-4 grid gap-3"></div>
-    </div>
-
-    <!-- 電腦 -->
-    <div class="hidden md:grid md:grid-cols-12 md:gap-6">
-      <aside class="md:col-span-3">
-        <div class="mb-4 flex gap-2">
-          <button data-branch="崇武" class="branch-btn px-3 py-2 rounded-xl border bg-black text-white">崇武</button>
-          <button data-branch="TDS" class="branch-btn px-3 py-2 rounded-xl border">TDS</button>
-          <button data-branch="尚武" class="branch-btn px-3 py-2 rounded-xl border">尚武</button>
-        </div>
-        <div id="monthTabsDesktop" class="grid gap-2"></div>
-      </aside>
-      <div class="md:col-span-9">
-        <div class="overflow-auto rounded-2xl border">
-          <table class="min-w-full text-sm">
-            <thead class="bg-gray-50"><tr><th class="p-3 text-left">日期</th><th class="p-3 text-left">課程</th><th class="p-3 text-left">時間</th><th class="p-3 text-left">教練</th><th class="p-3 text-left">館別</th></tr></thead>
-            <tbody id="desktopTableBody"></tbody>
-          </table>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- 師資（占位） -->
-  <section class="max-w-7xl mx-auto px-4 py-12" id="coaches">
-    <h2 class="text-2xl font-bold mb-4">師資與資歷</h2>
-    <div class="grid sm:grid-cols-2 lg:grid-cols-3 gap-6">
-      <div class="p-6 rounded-2xl border"><div class="h-40 rounded-xl bg-gray-100 mb-4 flex items-center justify-center">教練照片</div><h3 class="font-bold">A 教練</h3><p class="text-gray-600 text-sm mt-1">國際級段位｜自由品勢／競技戰術｜常駐：崇武・TDS</p></div>
-      <div class="p-6 rounded-2xl border"><div class="h-40 rounded-xl bg-gray-100 mb-4 flex items-center justify-center">教練照片</div><h3 class="font-bold">B 教練</h3><p class="text-gray-600 text-sm mt-1">國手教練團｜品勢基礎／表現力｜常駐：尚武</p></div>
-      <div class="p-6 rounded-2xl border"><div class="h-40 rounded-xl bg-gray-100 mb-4 flex items-center justify-center">教練照片</div><h3 class="font-bold">C 教練</h3><p class="text-gray-600 text-sm mt-1">幼兒啟蒙｜安全體能｜常駐：尚武</p></div>
-    </div>
-  </section>
-
-  <!-- 表單 -->
-  <section class="max-w-3xl mx-auto px-4 py-12" id="signup">
-    <h2 class="text-2xl font-bold mb-4">預約免費試上</h2>
-    <form class="grid md:grid-cols-2 gap-4" onsubmit="event.preventDefault(); alert('已收到，教練將於 24 小時內與您聯繫');">
-      <input required class="p-3 rounded-xl border" placeholder="家長姓名" />
-      <input required class="p-3 rounded-xl border" placeholder="聯絡電話" />
-      <input class="p-3 rounded-xl border md:col-span-2" placeholder="學生姓名 / 年齡" />
-      <select class="p-3 rounded-xl border"><option>想體驗的課程</option><option>品勢班</option><option>對練班</option><option>自由品勢</option><option>跆舞班</option><option>初級班</option><option>幼兒班</option></select>
-      <select class="p-3 rounded-xl border"><option>偏好館別</option><option>崇武</option><option>TDS</option><option>尚武</option></select>
-      <textarea class="p-3 rounded-xl border md:col-span-2" rows="4" placeholder="備註"></textarea>
-      <button class="p-3 rounded-xl bg-black text-white md:col-span-2">送出</button>
-    </form>
   </section>
 
   <!-- Footer -->
   <footer class="mt-12 border-t">
     <div class="max-w-7xl mx-auto px-4 py-8 text-sm text-gray-600">
-      © 崇武道館・TDS 分館・尚武道館｜北投｜02-XXXX-XXXX｜<a href="https://line.me/" class="underline">LINE 諮詢</a>
+      © 崇武道館 TDS分館 尚武道館｜北投 02-XXXX-XXXX｜<a href="https://line.me/" class="underline">LINE 諮詢</a>
     </div>
   </footer>
-
-  <!-- 手機固定底部 CTA -->
-  <div class="md:hidden fixed bottom-0 left-0 right-0 bg-white/90 backdrop-blur border-t p-3 flex gap-3">
-    <a href="#signup" class="flex-1 p-3 rounded-xl bg-black text-white text-center">預約試上</a>
-    <a href="https://line.me/" class="flex-1 p-3 rounded-xl border text-center">LINE 諮詢</a>
-  </div>
-
-  <!-- 時刻表腳本（示例資料） -->
-  <script>
-    const months=[{key:'2025-08',label:'8 月'},{key:'2025-09',label:'9 月'},{key:'2025-10',label:'10 月'}];
-    const scheduleData={
-      '2025-08':[
-        {date:'8/25',course:'品勢班',time:'18:00-19:30',coach:'A 教練',branch:'崇武'},
-        {date:'8/27',course:'對練班',time:'19:30-21:00',coach:'B 教練',branch:'崇武'},
-        {date:'8/28',course:'自由品勢',time:'18:30-20:00',coach:'A 教練',branch:'TDS'},
-        {date:'8/30',course:'幼兒班',time:'16:00-17:00',coach:'C 教練',branch:'尚武'},
-      ],
-      '2025-09':[
-        {date:'9/03',course:'跆舞班',time:'17:00-18:00',coach:'B 教練',branch:'TDS'},
-        {date:'9/05',course:'品勢班',time:'18:00-19:30',coach:'A 教練',branch:'崇武'},
-        {date:'9/07',course:'對練班',time:'19:30-21:00',coach:'B 教練',branch:'崇武'},
-        {date:'9/12',course:'初級班',time:'18:00-19:00',coach:'C 教練',branch:'尚武'},
-      ],
-      '2025-10':[
-        {date:'10/02',course:'自由品勢',time:'18:30-20:00',coach:'A 教練',branch:'TDS'},
-        {date:'10/05',course:'跆舞班',time:'17:00-18:00',coach:'B 教練',branch:'TDS'},
-        {date:'10/09',course:'幼兒班',time:'16:00-17:00',coach:'C 教練',branch:'尚武'},
-      ],
-    };
-
-    const monthTabsMobile=document.getElementById('monthTabsMobile');
-    const branchSelectMobile=document.getElementById('branchSelectMobile');
-    const mobileList=document.getElementById('mobileList');
-    const monthTabsDesktop=document.getElementById('monthTabsDesktop');
-    const desktopTableBody=document.getElementById('desktopTableBody');
-    const branchBtns=()=>Array.from(document.querySelectorAll('.branch-btn'));
-
-    let currentMonth=months[0]?.key||'', currentBranch='崇武';
-
-    function renderTabs(){
-      if(monthTabsMobile) monthTabsMobile.innerHTML=months.map(m=>`<button data-month="${m.key}" class="snap-start px-4 py-2 rounded-xl border ${m.key===currentMonth?'bg-black text-white':''}">${m.label}</button>`).join('');
-      if(monthTabsDesktop) monthTabsDesktop.innerHTML=months.map(m=>`<button data-month="${m.key}" class="w-full text-left px-4 py-2 rounded-xl border ${m.key===currentMonth?'bg-black text-white':''}">${m.label}</button>`).join('');
-    }
-
-    function setActive(monthKey,branch){
-      if(monthKey) currentMonth=monthKey;
-      if(branch) currentBranch=branch;
-
-      if(monthTabsMobile) [...monthTabsMobile.children].forEach(b=>{b.classList.toggle('bg-black',b.dataset.month===currentMonth);b.classList.toggle('text-white',b.dataset.month===currentMonth);});
-      if(monthTabsDesktop) [...monthTabsDesktop.children].forEach(b=>{b.classList.toggle('bg-black',b.dataset.month===currentMonth);b.classList.toggle('text-white',b.dataset.month===currentMonth);});
-      branchBtns().forEach(b=>{b.classList.toggle('bg-black',b.dataset.branch===currentBranch);b.classList.toggle('text-white',b.dataset.branch===currentBranch);});
-      if(branchSelectMobile && branchSelectMobile.value!==currentBranch) branchSelectMobile.value=currentBranch;
-
-      const list=(scheduleData[currentMonth]||[]).filter(r=>r.branch===currentBranch);
-
-      if(mobileList) mobileList.innerHTML=list.length?list.map(r=>`<div class="p-4 rounded-2xl border"><div class="font-semibold">${r.date}｜${r.course}</div><div class="text-gray-600 text-sm mt-1">${r.time}・${r.coach}・${r.branch}</div></div>`).join(''):'<div class="text-gray-500">本館本月尚無課表</div>';
-      if(desktopTableBody) desktopTableBody.innerHTML=list.length?list.map(r=>`<tr class="border-t"><td class="p-3">${r.date}</td><td class="p-3">${r.course}</td><td class="p-3">${r.time}</td><td class="p-3">${r.coach}</td><td class="p-3">${r.branch}</td></tr>`).join(''):'<tr class="border-t"><td class="p-3 text-gray-500" colspan="5">本館本月尚無課表</td></tr>';
-    }
-
-    function bindEvents(){
-      if(monthTabsMobile) monthTabsMobile.addEventListener('click',e=>{const b=e.target.closest('button[data-month]'); if(b) setActive(b.dataset.month,null);});
-      if(monthTabsDesktop) monthTabsDesktop.addEventListener('click',e=>{const b=e.target.closest('button[data-month]'); if(b) setActive(b.dataset.month,null);});
-      if(branchSelectMobile) branchSelectMobile.addEventListener('change',e=>setActive(null,e.target.value));
-      branchBtns().forEach(b=>b.addEventListener('click',()=>setActive(null,b.dataset.branch)));
-    }
-
-    renderTabs(); bindEvents(); setActive(currentMonth,currentBranch);
-  </script>
 </body>
 </html>
-
