--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
   <style>
     .text-gold{background:linear-gradient(90deg,#e9d27b,#f1c40f,#d4af37);-webkit-background-clip:text;background-clip:text;color:transparent}
     .card{border-radius:1rem;border:1px solid rgb(229 231 235)}
+    .playhint{position:absolute;inset:0;display:flex;align-items:center;justify-content:center}
+    .playhint>span{background:rgba(0,0,0,.4);color:#fff;border-radius:.5rem;padding:.25rem .5rem;font-size:.875rem}
+    video{display:block;width:100%;height:100%;object-fit:cover}
   </style>
 </head>
 <body class="bg-white text-gray-900">
@@ -21,11 +24,10 @@
     <div class="max-w-7xl mx-auto h-14 px-4 flex items-center justify-between">
       <a class="font-extrabold tracking-wide">崇武 TDS 尚武</a>
       <nav class="hidden md:flex items-center gap-6">
+        <a href="#coaches" class="hover:underline">師資</a>
         <a href="#highlights" class="hover:underline">實力亮點</a>
         <a href="#branches" class="hover:underline">分館介紹</a>
         <a href="#courses" class="hover:underline">課程</a>
-        <a href="#coaches" class="hover:underline">師資</a>
-        <a href="#environment" class="hover:underline">環境</a>
         <a href="#contact" class="px-4 py-2 rounded-xl bg-black text-white">預約試上</a>
       </nav>
       <a href="#contact" class="md:hidden text-sm underline">預約</a>
@@ -52,108 +54,9 @@
     </div>
   </section>
 
-  <!-- 三大賣點：圖片呈現 -->
-  <section class="max-w-7xl mx-auto px-4 py-12" id="highlights">
-    <h2 class="text-2xl font-bold mb-6">我們的實力</h2>
-    <div class="grid gap-6 md:grid-cols-3">
-      <figure class="card overflow-hidden bg-white">
-        <div class="relative aspect-video">
-          <img src="101.jpg" alt="優秀選手" class="w-full h-full object-cover" loading="lazy" />
-        </div>
-        <figcaption class="p-4">
-          <div class="text-sm text-gray-500 mb-1">🏆 優秀選手</div>
-          <h3 class="font-semibold">實戰經驗豐富 表現穩定</h3>
-          <p class="text-gray-600 text-sm mt-1">舞台沉著冷靜 長期訓練成果可見</p>
-        </figcaption>
-      </figure>
-      <figure class="card overflow-hidden bg-white">
-        <div class="relative aspect-video">
-          <img src="102.jpg" alt="金牌教練團隊" class="w-full h-full object-cover" loading="lazy" />
-        </div>
-        <figcaption class="p-4">
-          <div class="text-sm text-gray-500 mb-1">🥇 金牌教練團隊</div>
-          <h3 class="font-semibold">系統化訓練 精準分組指導</h3>
-          <p class="text-gray-600 text-sm mt-1">每位學員都能被看見 都能獲得回饋</p>
-        </figcaption>
-      </figure>
-      <figure class="card overflow-hidden bg-white">
-        <div class="relative aspect-video">
-          <img src="103.jpg" alt="嚴謹晉級檢定" class="w-full h-full object-cover" loading="lazy" />
-        </div>
-        <figcaption class="p-4">
-          <div class="text-sm text-gray-500 mb-1">📈 嚴謹晉級檢定</div>
-          <h3 class="font-semibold">標準化評量 清楚成長路徑</h3>
-          <p class="text-gray-600 text-sm mt-1">準備 評分 授帶 全程透明可追蹤</p>
-        </figcaption>
-      </figure>
-    </div>
-  </section>
-
-  <!-- 分館介紹 -->
-  <section class="max-w-7xl mx-auto px-4 py-12" id="branches">
-    <h2 class="text-2xl font-bold mb-6">分館介紹</h2>
-    <div class="grid md:grid-cols-3 gap-6">
-      <article class="card p-6">
-        <img src="101.jpg" alt="崇武道館 總館" class="rounded-xl mb-3" loading="lazy" />
-        <h3 class="font-bold">崇武道館 總館</h3>
-        <p class="mt-2 text-gray-600">核心訓練中心 品勢 對練 幼兒 初級進階</p>
-        <div class="mt-3 text-sm text-gray-500">地址 電話 LINE 請替換</div>
-      </article>
-      <article class="card p-6">
-        <img src="102.jpg" alt="TDS 分館" class="rounded-xl mb-3" loading="lazy" />
-        <h3 class="font-bold">TDS 分館</h3>
-        <p class="mt-2 text-gray-600">自由品勢 公品 跆舞專門訓練</p>
-        <div class="mt-3 text-sm text-gray-500">地址 電話 LINE 請替換</div>
-      </article>
-      <article class="card p-6">
-        <img src="103.jpg" alt="尚武道館" class="rounded-xl mb-3" loading="lazy" />
-        <h3 class="font-bold">尚武道館</h3>
-        <p class="mt-2 text-gray-600">初級與啟蒙課程 幼兒 初級 基礎品勢</p>
-        <div class="mt-3 text-sm text-gray-500">地址 電話 LINE 請替換</div>
-      </article>
-    </div>
-  </section>
-
-  <!-- 課程介紹 -->
-  <section class="max-w-7xl mx-auto px-4 py-12" id="courses">
-    <h2 class="text-2xl font-bold mb-6">課程介紹</h2>
-    <div class="md:grid md:grid-cols-3 md:gap-6 overflow-x-auto md:overflow-visible flex gap-4 snap-x">
-      <article class="card min-w-[260px] md:min-w-0 snap-start p-5">
-        <h3 class="font-bold">品勢班</h3>
-        <p class="mt-2 text-gray-600">基本功與套路扎根 穩定輸出表現力</p>
-        <div class="mt-3 flex flex-wrap gap-2 text-xs"><span class="px-2 py-1 rounded bg-gray-100">崇武</span><span class="px-2 py-1 rounded bg-gray-100">尚武</span></div>
-      </article>
-      <article class="card min-w-[260px] md:min-w-0 snap-start p-5">
-        <h3 class="font-bold">對練班</h3>
-        <p class="mt-2 text-gray-600">競技技術與比賽戰術 臨場反應訓練</p>
-        <div class="mt-3 flex flex-wrap gap-2 text-xs"><span class="px-2 py-1 rounded bg-gray-100">崇武</span></div>
-      </article>
-      <article class="card min-w-[260px] md:min-w-0 snap-start p-5">
-        <h3 class="font-bold">自由品勢</h3>
-        <p class="mt-2 text-gray-600">創意與音樂融合 展現難度與美感</p>
-        <div class="mt-3 flex flex-wrap gap-2 text-xs"><span class="px-2 py-1 rounded bg-gray-100">TDS</span></div>
-      </article>
-      <article class="card min-w-[260px] md:min-w-0 snap-start p-5">
-        <h3 class="font-bold">跆舞班</h3>
-        <p class="mt-2 text-gray-600">節奏與武術表演 舞台自信養成</p>
-        <div class="mt-3 flex flex-wrap gap-2 text-xs"><span class="px-2 py-1 rounded bg-gray-100">TDS</span><span class="px-2 py-1 rounded bg-gray-100">崇武</span></div>
-      </article>
-      <article class="card min-w-[260px] md:min-w-0 snap-start p-5">
-        <h3 class="font-bold">初級班</h3>
-        <p class="mt-2 text-gray-600">零基礎友善 動作分解與安全觀念</p>
-        <div class="mt-3 flex flex-wrap gap-2 text-xs"><span class="px-2 py-1 rounded bg-gray-100">尚武</span></div>
-      </article>
-      <article class="card min-w-[260px] md:min-w-0 snap-start p-5">
-        <h3 class="font-bold">幼兒班</h3>
-        <p class="mt-2 text-gray-600">啟蒙專注力與協調性 快樂學習</p>
-        <div class="mt-3 flex flex-wrap gap-2 text-xs"><span class="px-2 py-1 rounded bg-gray-100">尚武</span></div>
-      </article>
-    </div>
-  </section>
-
-  <!-- 師資與資歷 -->
+  <!-- 師資與經歷（上移） -->
   <section class="max-w-7xl mx-auto px-4 py-12" id="coaches">
-    <h2 class="text-2xl font-bold mb-6">師資與資歷</h2>
+    <h2 class="text-2xl font-bold mb-6">師資與經歷</h2>
     <div class="grid sm:grid-cols-2 lg:grid-cols-3 gap-6">
       <div class="card p-6">
         <div class="h-40 rounded-xl bg-gray-100 mb-4 flex items-center justify-center">教練照片</div>
@@ -173,26 +76,203 @@
     </div>
   </section>
 
-  <!-- 環境照片 你可先重用現有圖 或後續替換 -->
-  <section class="max-w-7xl mx-auto px-4 py-12" id="environment">
-    <h2 class="text-2xl font-bold mb-6">環境照片</h2>
-    <div class="grid grid-cols-2 md:grid-cols-4 gap-4">
-      <figure class="card overflow-hidden">
-        <img src="101.jpg" alt="更衣區" class="w-full h-40 object-cover" loading="lazy" />
-        <figcaption class="p-2 text-sm text-gray-600">更衣區</figcaption>
+  <!-- 我們的實力（改版） -->
+  <section class="max-w-7xl mx-auto px-4 py-12" id="highlights">
+    <h2 class="text-2xl font-bold mb-6">我們的實力</h2>
+    <div class="grid gap-6 md:grid-cols-3">
+      <!-- 1) 崇武道館年資簡介（文字卡） -->
+      <figure class="card overflow-hidden bg-white">
+        <div class="p-6">
+          <div class="text-sm text-gray-500 mb-1">🏆 崇武道館年資簡介</div>
+          <h3 class="font-semibold">穩健傳承 專注培訓</h3>
+          <ul class="mt-3 text-gray-700 text-sm space-y-1">
+            <li>創館年資 長期深耕在地</li>
+            <li>完整晉級制度 與比賽歷練</li>
+            <li>學員從啟蒙到競技的成長路徑清楚</li>
+          </ul>
+        </div>
       </figure>
-      <figure class="card overflow-hidden">
-        <img src="102.jpg" alt="地墊" class="w-full h-40 object-cover" loading="lazy" />
-        <figcaption class="p-2 text-sm text-gray-600">地墊</figcaption>
+
+      <!-- 2) 金牌教練團（影片） -->
+      <figure class="card overflow-hidden bg-black">
+        <div class="relative aspect-video">
+          <video
+            src="video_coaches.mp4"
+            poster="102.jpg"
+            muted
+            controls
+            playsinline
+            preload="metadata"
+          ></video>
+          <button class="playhint" aria-label="播放或暫停"
+            onclick="const v=this.previousElementSibling; if(v.paused){v.play();}else{v.pause();}">
+            <span>點擊播放 暫停</span>
+          </button>
+        </div>
+        <figcaption class="p-4 text-white">
+          <div class="text-sm text-white/80 mb-1">🥇 金牌教練團</div>
+          <h3 class="font-semibold">系統化訓練 精準分組指導</h3>
+          <p class="text-white/80 text-sm mt-1">每位學員都能被看見 都能獲得回饋</p>
+        </figcaption>
       </figure>
-      <figure class="card overflow-hidden">
-        <img src="103.jpg" alt="安全護具" class="w-full h-40 object-cover" loading="lazy" />
-        <figcaption class="p-2 text-sm text-gray-600">安全護具</figcaption>
+
+      <!-- 3) 進擊肯定（大合照） -->
+      <figure class="card overflow-hidden bg-white">
+        <div class="relative aspect-video">
+          <img src="103.jpg" alt="進擊肯定 大合照" class="w-full h-full object-cover" loading="lazy" />
+        </div>
+        <figcaption class="p-4">
+          <div class="text-sm text-gray-500 mb-1">📈 進擊肯定</div>
+          <h3 class="font-semibold">團隊榮耀 一起前進</h3>
+          <p class="text-gray-600 text-sm mt-1">舞台與訓練相互印證 凝聚成長</p>
+        </figcaption>
       </figure>
-      <figure class="card overflow-hidden">
-        <img src="100.jpg" alt="家長等候區" class="w-full h-40 object-cover" loading="lazy" />
-        <figcaption class="p-2 text-sm text-gray-600">家長等候區</figcaption>
-      </figure>
+    </div>
+  </section>
+
+  <!-- 分館介紹（三館皆影片 文案不變） -->
+  <section class="max-w-7xl mx-auto px-4 py-12" id="branches">
+    <h2 class="text-2xl font-bold mb-6">分館介紹</h2>
+    <div class="grid md:grid-cols-3 gap-6">
+      <!-- 崇武 總館 -->
+      <article class="card p-0 overflow-hidden">
+        <div class="relative aspect-video bg-black">
+          <video src="video_chongwu.mp4" poster="101.jpg" muted controls playsinline preload="metadata"></video>
+          <button class="playhint" aria-label="播放或暫停"
+            onclick="const v=this.previousElementSibling; if(v.paused){v.play();}else{v.pause();}">
+            <span>點擊播放 暫停</span>
+          </button>
+        </div>
+        <div class="p-6">
+          <h3 class="font-bold">崇武道館 總館</h3>
+          <p class="mt-2 text-gray-600">核心訓練中心 品勢 對練 幼兒 初級進階</p>
+          <div class="mt-3 text-sm text-gray-500">地址 電話 LINE 請替換</div>
+        </div>
+      </article>
+
+      <!-- TDS -->
+      <article class="card p-0 overflow-hidden">
+        <div class="relative aspect-video bg-black">
+          <video src="video_tds.mp4" poster="102.jpg" muted controls playsinline preload="metadata"></video>
+          <button class="playhint" aria-label="播放或暫停"
+            onclick="const v=this.previousElementSibling; if(v.paused){v.play();}else{v.pause();}">
+            <span>點擊播放 暫停</span>
+          </button>
+        </div>
+        <div class="p-6">
+          <h3 class="font-bold">TDS 分館</h3>
+          <p class="mt-2 text-gray-600">自由品勢 公品 跆舞專門訓練</p>
+          <div class="mt-3 text-sm text-gray-500">地址 電話 LINE 請替換</div>
+        </div>
+      </article>
+
+      <!-- 尚武 -->
+      <article class="card p-0 overflow-hidden">
+        <div class="relative aspect-video bg-black">
+          <video src="video_shangwu.mp4" poster="103.jpg" muted controls playsinline preload="metadata"></video>
+          <button class="playhint" aria-label="播放或暫停"
+            onclick="const v=this.previousElementSibling; if(v.paused){v.play();}else{v.pause();}">
+            <span>點擊播放 暫停</span>
+          </button>
+        </div>
+        <div class="p-6">
+          <h3 class="font-bold">尚武道館</h3>
+          <p class="mt-2 text-gray-600">初級與啟蒙課程 幼兒 初級 基礎品勢</p>
+          <div class="mt-3 text-sm text-gray-500">地址 電話 LINE 請替換</div>
+        </div>
+      </article>
+    </div>
+  </section>
+
+  <!-- 課程介紹（每張可放影片或照片） -->
+  <section class="max-w-7xl mx-auto px-4 py-12" id="courses">
+    <h2 class="text-2xl font-bold mb-6">課程介紹</h2>
+    <div class="md:grid md:grid-cols-3 md:gap-6 overflow-x-auto md:overflow-visible flex gap-4 snap-x">
+
+      <!-- 品勢班：影片示例 -->
+      <article class="card min-w-[260px] md:min-w-0 snap-start overflow-hidden">
+        <div class="relative aspect-video bg-black">
+          <video src="course_poomsae.mp4" poster="101.jpg" muted controls playsinline preload="metadata"></video>
+          <button class="playhint" aria-label="播放或暫停"
+            onclick="const v=this.previousElementSibling; if(v.paused){v.play();}else{v.pause();}">
+            <span>點擊播放 暫停</span>
+          </button>
+        </div>
+        <div class="p-5">
+          <h3 class="font-bold">品勢班</h3>
+          <p class="mt-2 text-gray-600">基本功與套路扎根 穩定輸出表現力</p>
+          <div class="mt-3 flex flex-wrap gap-2 text-xs"><span class="px-2 py-1 rounded bg-gray-100">崇武</span><span class="px-2 py-1 rounded bg-gray-100">尚武</span></div>
+        </div>
+      </article>
+
+      <!-- 對練班：照片示例 -->
+      <article class="card min-w-[260px] md:min-w-0 snap-start overflow-hidden">
+        <div class="relative aspect-video">
+          <img src="101.jpg" alt="對練" class="w-full h-full object-cover" loading="lazy" />
+        </div>
+        <div class="p-5">
+          <h3 class="font-bold">對練班</h3>
+          <p class="mt-2 text-gray-600">競技技術與比賽戰術 臨場反應訓練</p>
+          <div class="mt-3 flex flex-wrap gap-2 text-xs"><span class="px-2 py-1 rounded bg-gray-100">崇武</span></div>
+        </div>
+      </article>
+
+      <!-- 自由品勢：影片示例 -->
+      <article class="card min-w-[260px] md:min-w-0 snap-start overflow-hidden">
+        <div class="relative aspect-video bg-black">
+          <video src="course_freestyle.mp4" poster="102.jpg" muted controls playsinline preload="metadata"></video>
+          <button class="playhint" aria-label="播放或暫停"
+            onclick="const v=this.previousElementSibling; if(v.paused){v.play();}else{v.pause();}">
+            <span>點擊播放 暫停</span>
+          </button>
+        </div>
+        <div class="p-5">
+          <h3 class="font-bold">自由品勢</h3>
+          <p class="mt-2 text-gray-600">創意與音樂融合 展現難度與美感</p>
+          <div class="mt-3 flex flex-wrap gap-2 text-xs"><span class="px-2 py-1 rounded bg-gray-100">TDS</span></div>
+        </div>
+      </article>
+
+      <!-- 跆舞班：影片示例 -->
+      <article class="card min-w-[260px] md:min-w-0 snap-start overflow-hidden">
+        <div class="relative aspect-video bg-black">
+          <video src="course_ktaedance.mp4" poster="102.jpg" muted controls playsinline preload="metadata"></video>
+          <button class="playhint" aria-label="播放或暫停"
+            onclick="const v=this.previousElementSibling; if(v.paused){v.play();}else{v.pause();}">
+            <span>點擊播放 暫停</span>
+          </button>
+        </div>
+        <div class="p-5">
+          <h3 class="font-bold">跆舞班</h3>
+          <p class="mt-2 text-gray-600">節奏與武術表演 舞台自信養成</p>
+          <div class="mt-3 flex flex-wrap gap-2 text-xs"><span class="px-2 py-1 rounded bg-gray-100">TDS</span><span class="px-2 py-1 rounded bg-gray-100">崇武</span></div>
+        </div>
+      </article>
+
+      <!-- 初級班：照片示例 -->
+      <article class="card min-w-[260px] md:min-w-0 snap-start overflow-hidden">
+        <div class="relative aspect-video">
+          <img src="103.jpg" alt="初級班" class="w-full h-full object-cover" loading="lazy" />
+        </div>
+        <div class="p-5">
+          <h3 class="font-bold">初級班</h3>
+          <p class="mt-2 text-gray-600">零基礎友善 動作分解與安全觀念</p>
+          <div class="mt-3 flex flex-wrap gap-2 text-xs"><span class="px-2 py-1 rounded bg-gray-100">尚武</span></div>
+        </div>
+      </article>
+
+      <!-- 幼兒班：照片示例 -->
+      <article class="card min-w-[260px] md:min-w-0 snap-start overflow-hidden">
+        <div class="relative aspect-video">
+          <img src="103.jpg" alt="幼兒班" class="w-full h-full object-cover" loading="lazy" />
+        </div>
+        <div class="p-5">
+          <h3 class="font-bold">幼兒班</h3>
+          <p class="mt-2 text-gray-600">啟蒙專注力與協調性 快樂學習</p>
+          <div class="mt-3 flex flex-wrap gap-2 text-xs"><span class="px-2 py-1 rounded bg-gray-100">尚武</span></div>
+        </div>
+      </article>
+
     </div>
   </section>
 
@@ -235,3 +315,4 @@
   </div>
 </body>
 </html>
+
